--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header class="max-w-[1220px] mx-auto">
   <nav
     class="text-white opacity-80 flex items-center justify-center gap-8
-  [&>a:hover]:text-amber-200
+  [&>a:hover]:text-slate-400
     [&>a]:transition
     [&>a]:duration-300"
   >
