--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title, description } = Astro.props
   </head>
   <body>
     <div
-      class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(254,243,199,0.1),rgba(255,255,255,0))]"
+      class="absolute top-0 z-[-2] h-screen w-screen bg-[#000103] bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%, #3e4d62,#000103)] gradient-box"
     >
     </div>
     <Header />
@@ -43,6 +43,7 @@ const { title, description } = Astro.props
 
   html {
     color-scheme: light dark;
+
     scroll-behavior: smooth;
   }
 
@@ -54,7 +55,7 @@ const { title, description } = Astro.props
     position: relative;
   }
 
-  .bg-neutral-950 {
+  .gradient-box {
     height: 100%;
   }
 </style>
