--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import UserIcon from "../components/icons/User.astro"
         class="py-5 flex flex-col gap-4 items-start md:flex-row md:items-center"
       >
         <h1 class="text-3xl
-      font-bold">Hey, soy Franco Rinque</h1>
+        font-bold">Hey, soy Franco Rinque</h1>
         <a
           href="https://www.linkedin.com/in/francorinque"
           class="flex items-center justify-center"
@@ -38,7 +38,7 @@ import UserIcon from "../components/icons/User.astro"
       </div>
       <h2 class="text-xl opacity-80 text-pretty">
         Desarrollador Web Frontend de Buenos Aires, Argentina. Listo para crear <span
-          class="text-amber-100">aplicaciones web únicas</span
+          class="text-ui">aplicaciones web únicas</span
         >.
       </h2>
 
