--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@
     </div>
 
     <nav
-      class="flex flex-wrap items-center justify-center mb-6 mt-6 gap-8 text-md font-medium text-white/80 sm:mb-0 sm:mt-0 [&>a:hover]:text-amber-200
+      class="flex flex-wrap items-center justify-center mb-6 mt-6 gap-8 text-md font-medium text-white/80 sm:mb-0 sm:mt-0 [&>a:hover]:text-slate-400
       [&>a]:transition
       [&>a]:duration-300"
     >
