--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,42 +7,36 @@ import HtmlIcon from "../components/icons/Html.astro"
 import CssIcon from "../components/icons/Css.astro"
 import JavascriptIcon from "../components/icons/Javascript.astro"
 import ReduxIcon from "./icons/Redux.astro"
+import ZustandIcon from "./icons/Zustand.astro"
 
 const TAGS = {
   REACT: {
     name: "React",
-    class: "bg-[#23272f] text-[#f6f7f9]",
     icon: ReactIcon,
   },
   FRAMER_MOTION: {
     name: "Framer Motion",
-    class: "bg-[#1a1a1a] text-[#f6f7f9]",
     icon: FramerIcon,
-  },
-  ZUSTAND: {
-    name: "Zustand",
-    class: "bg-[#181818] text-white",
-    icon: null,
   },
   HTML: {
     name: "HTML",
-    class: "bg-[#23272f] text-[#f6f7f9]",
     icon: HtmlIcon,
   },
   CSS: {
     name: "CSS",
-    class: "bg-[#062d48] text-[#f6f7f9]",
     icon: CssIcon,
   },
   JS: {
     name: "JavaScript",
-    class: "bg-[#23272f] text-[#f6f7f9]",
     icon: JavascriptIcon,
   },
   REDUX: {
     name: "Redux toolkit",
-    class: "bg-[#211338] text-[#f6f7f9]",
     icon: ReduxIcon,
+  },
+  ZUSTAND: {
+    name: "Zustand",
+    icon: ZustandIcon,
   },
 }
 
