--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -2,12 +2,8 @@
   {...Astro.props}
   target="_blank"
   rel="noopener noreferrer"
-  class="py-2 px-4
-  text-xs md:text-md
-  flex items-center justify-center gap-x-2
-  bg-neutral-900
-    border border-neutral-800 rounded-full
-    hover:scale-110 hover:bg-neutral-800 transition"
+  class="text-xs md:text-md
+   gap-x-2 inline-flex py-2 animate-background-shine items-center justify-center rounded-md border border-slate-800 bg-[linear-gradient(110deg,#000103,45%,#1e2631,55%,#000103)] bg-[length:200%_100%] px-6 font-medium text-slate-400 transition-colors focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50 hover:scale-110"
 >
   <slot />
 </a>
