feat: responsive social pill

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,8 +42,6 @@ const { title, description } = Astro.props
   }
 
   html {
-    color-scheme: light dark;
-
     scroll-behavior: smooth;
   }
 
@@ -53,6 +51,7 @@ const { title, description } = Astro.props
     width: 100vw;
     padding: 30px 0;
     position: relative;
+    color: #efefef;
   }
 
   .gradient-box {
