--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import UserIcon from "../components/icons/User.astro"
         >.
       </h2>
 
-      <nav class="mt-5 flex items-center justify-start gap-4">
+      <nav class="mt-5 flex flex-wrap items-center justify-start gap-4">
         <SocialPill href="https://github.com/francorinque">
           <GithubIcon class="size-6" />
           Github
